[gd_scene load_steps=18 format=3 uid="uid://hvkvmexukes3"]

[ext_resource type="Script" path="res://Levels/BulletHell/StateManager.gd" id="1_ha5s1"]
[ext_resource type="Texture2D" uid="uid://b5vbhsfmc6h7b" path="res://Assets/Mechanics/Father.png" id="2_iyxed"]
[ext_resource type="Texture2D" uid="uid://rnepadpt3m54" path="res://Assets/Tileset/Tileset.png" id="3_ad18a"]
[ext_resource type="PackedScene" uid="uid://d57f42n4dyje" path="res://Nodes/Mechanics/Hand.tscn" id="4_2b6pw"]
[ext_resource type="PackedScene" uid="uid://b11hooauu7282" path="res://Nodes/Player/Player.tscn" id="6_51teh"]
[ext_resource type="Script" path="res://Levels/BulletHell/BulletHellPlayer.gd" id="7_30vet"]
[ext_resource type="PackedScene" uid="uid://c2xl7q7iaufej" path="res://Nodes/Mechanics/Joystick.tscn" id="7_vhad4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xgs8j"]
texture = ExtResource("3_ad18a")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:1/0 = 0
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
3:3/0 = 0
4:3/0 = 0
4:4/0 = 0
3:4/0 = 0
4:5/0 = 0
5:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
7:5/0 = 0
8:5/0 = 0
8:4/0 = 0
9:4/0 = 0
9:3/0 = 0
9:2/0 = 0
8:2/0 = 0
8:3/0 = 0
8:1/0 = 0
7:1/0 = 0
7:0/0 = 0
6:0/0 = 0
5:0/0 = 0
5:1/0 = 0
6:1/0 = 0
4:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:3/0 = 0
5:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:3/0 = 0
6:5/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_r4rpt"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_xgs8j")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtmmo"]
size = Vector2(25.0013, 517)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iiqut"]
size = Vector2(24.0025, 518)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bg5mv"]
size = Vector2(22.0006, 941)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpchm"]
size = Vector2(22.0006, 928.938)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s61pv"]
size = Vector2(22.0006, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1miv7"]
size = Vector2(22.0006, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sy6kt"]
size = Vector2(22.0006, 1154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wuon"]
size = Vector2(22.0006, 1150)

[node name="BulletHell" type="Node2D"]
script = ExtResource("1_ha5s1")

[node name="Environment" type="Node2D" parent="."]
z_index = -2

[node name="ColorRect" type="ColorRect" parent="Environment"]
offset_left = -384.0
offset_right = 1536.0
offset_bottom = 648.0
color = Color(0.133333, 0.121569, 0.176471, 1)

[node name="Father" type="Sprite2D" parent="Environment"]
clip_children = 2
position = Vector2(576, 96)
scale = Vector2(6, 6)
texture = ExtResource("2_iyxed")

[node name="TileMap" type="TileMap" parent="Environment"]
position = Vector2(6.10352e-05, 1.52588e-05)
tile_set = SubResource("TileSet_r4rpt")
format = 2
layer_0/tile_data = PackedInt32Array(196612, 1, 0, 196613, 65537, 0, 196614, 65537, 0, 196615, 65537, 0, 196616, 65537, 0, 196617, 65537, 0, 196618, 65537, 0, 196619, 65537, 0, 196620, 65537, 0, 196621, 65537, 0, 196622, 65537, 0, 196623, 65537, 0, 196624, 65537, 0, 196625, 65537, 0, 196626, 65537, 0, 196627, 65537, 0, 196628, 65537, 0, 196629, 65537, 0, 196630, 65537, 0, 196631, 65537, 0, 196632, 65537, 0, 196633, 65537, 0, 196634, 65537, 0, 196635, 65537, 0, 196636, 65537, 0, 196637, 65537, 0, 196638, 65537, 0, 196639, 131073, 0, 851981, 65537, 1, 786445, 65537, 1, 720909, 65537, 1, 655373, 65537, 1, 589837, 65537, 1, 524301, 65537, 1, 458765, 65537, 1, 393229, 65537, 1, 327693, 65537, 1, 262157, 65537, 1, 262156, 65537, 1, 262155, 65537, 1, 262154, 65537, 1, 262153, 65537, 1, 262152, 65537, 1, 262151, 65537, 1, 262150, 65537, 1, 262149, 65537, 1, 1114116, 1, 2, 327685, 65537, 1, 393221, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 589829, 65537, 1, 655365, 65537, 1, 720901, 65537, 1, 786437, 65537, 1, 851973, 65537, 1, 917509, 65537, 1, 983045, 65537, 1, 1048581, 65537, 1, 1114117, 65537, 2, 1114118, 65537, 2, 1048582, 65537, 1, 983046, 65537, 1, 917510, 65537, 1, 851974, 65537, 1, 786438, 65537, 1, 720902, 65537, 1, 655366, 65537, 1, 589830, 65537, 1, 524294, 65537, 1, 458758, 65537, 1, 393222, 65537, 1, 327686, 65537, 1, 327687, 65537, 1, 393223, 65537, 1, 458759, 65537, 1, 524295, 65537, 1, 589831, 65537, 1, 655367, 65537, 1, 720903, 65537, 1, 786439, 65537, 1, 851975, 65537, 1, 917511, 65537, 1, 983047, 65537, 1, 1048583, 65537, 1, 1114119, 65537, 2, 1114120, 65537, 2, 1048584, 65537, 1, 983048, 65537, 1, 917512, 65537, 1, 851976, 65537, 1, 786440, 65537, 1, 720904, 65537, 1, 655368, 65537, 1, 589832, 65537, 1, 524296, 65537, 1, 458760, 65537, 1, 393224, 65537, 1, 327688, 65537, 1, 327689, 65537, 1, 393225, 65537, 1, 458761, 65537, 1, 524297, 196609, 0, 589833, 65537, 1, 655369, 65537, 1, 720905, 196609, 1, 786441, 65537, 1, 851977, 65537, 1, 917513, 65537, 1, 983049, 65537, 1, 1048585, 65537, 1, 1114121, 65537, 2, 1114122, 65537, 2, 1048586, 65537, 1, 983050, 65537, 1, 917514, 65537, 1, 851978, 65537, 1, 786442, 65537, 1, 720906, 65537, 1, 655370, 65537, 1, 589834, 65537, 1, 524298, 65537, 1, 458762, 65537, 1, 393226, 65537, 1, 327690, 65537, 1, 327691, 65537, 1, 393227, 65537, 1, 458763, 65537, 1, 524299, 65537, 1, 589835, 65537, 1, 655371, 65537, 1, 720907, 65537, 1, 786443, 65537, 1, 851979, 65537, 1, 917515, 65537, 1, 983051, 65537, 1, 1048587, 65537, 1, 1114123, 65537, 2, 1114124, 65537, 2, 1048588, 65537, 1, 983052, 65537, 1, 917516, 65537, 1, 851980, 65537, 1, 786444, 65537, 1, 720908, 65537, 1, 655372, 65537, 1, 589836, 65537, 1, 524300, 65537, 1, 458764, 65537, 1, 393228, 65537, 1, 327692, 65537, 1, 917517, 65537, 1, 983053, 65537, 1, 1048589, 65537, 1, 1114125, 65537, 2, 1114126, 65537, 2, 1048590, 65537, 1, 983054, 65537, 1, 917518, 65537, 1, 851982, 196609, 0, 786446, 65537, 1, 720910, 65537, 1, 655374, 65537, 1, 589838, 65537, 1, 524302, 65537, 1, 458766, 65537, 1, 393230, 65537, 1, 327694, 65537, 1, 262158, 65537, 1, 262159, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, 458767, 196609, 0, 524303, 65537, 1, 589839, 65537, 1, 655375, 65537, 1, 720911, 65537, 1, 786447, 65537, 1, 851983, 65537, 1, 917519, 65537, 1, 983055, 65537, 1, 1048591, 65537, 1, 1114127, 65537, 2, 1114128, 65537, 2, 1048592, 65537, 1, 983056, 65537, 1, 917520, 65537, 1, 851984, 65537, 1, 786448, 65537, 1, 720912, 65537, 1, 655376, 65537, 1, 589840, 65537, 1, 524304, 65537, 1, 458768, 65537, 1, 393232, 65537, 1, 327696, 65537, 1, 262160, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 589841, 65537, 1, 655377, 65537, 1, 720913, 65537, 1, 786449, 65537, 1, 851985, 65537, 1, 917521, 65537, 1, 983057, 65537, 1, 1048593, 65537, 1, 1114129, 65537, 2, 1114130, 65537, 2, 1048594, 65537, 1, 983058, 65537, 1, 917522, 65537, 1, 851986, 65537, 1, 786450, 65537, 1, 720914, 65537, 1, 655378, 65537, 1, 589842, 65537, 1, 524306, 65537, 1, 458770, 65537, 1, 393234, 65537, 1, 327698, 65537, 1, 262162, 65537, 1, 262163, 65537, 1, 327699, 65537, 1, 393235, 65537, 1, 458771, 65537, 1, 524307, 65537, 1, 589843, 65537, 1, 655379, 65537, 1, 720915, 65537, 1, 786451, 65537, 1, 851987, 65537, 1, 917523, 65537, 1, 983059, 65537, 1, 1048595, 65537, 1, 1114131, 65537, 2, 1114132, 65537, 2, 1048596, 65537, 1, 983060, 65537, 1, 917524, 65537, 1, 851988, 65537, 1, 786452, 65537, 1, 720916, 65537, 1, 655380, 65537, 1, 589844, 65537, 1, 524308, 65537, 1, 458772, 65537, 1, 393236, 196609, 0, 327700, 65537, 1, 262164, 65537, 1, 262165, 65537, 1, 327701, 65537, 1, 393237, 65537, 1, 458773, 65537, 1, 524309, 65537, 1, 589845, 65537, 1, 655381, 65537, 1, 720917, 65537, 1, 786453, 65537, 1, 851989, 65537, 1, 917525, 65537, 1, 983061, 65537, 1, 1048597, 65537, 1, 1114133, 65537, 2, 1114134, 65537, 2, 1048598, 65537, 1, 983062, 65537, 1, 917526, 65537, 1, 851990, 196609, 0, 786454, 65537, 1, 720918, 65537, 1, 655382, 65537, 1, 589846, 65537, 1, 524310, 65537, 1, 458774, 65537, 1, 393238, 65537, 1, 327702, 65537, 1, 262166, 65537, 1, 262167, 65537, 1, 327703, 65537, 1, 393239, 65537, 1, 458775, 65537, 1, 524311, 65537, 1, 589847, 196609, 0, 655383, 65537, 1, 720919, 65537, 1, 786455, 65537, 1, 851991, 65537, 1, 917527, 65537, 1, 983063, 65537, 1, 1048599, 65537, 1, 1114135, 65537, 2, 1114136, 65537, 2, 1048600, 65537, 1, 983064, 65537, 1, 917528, 65537, 1, 851992, 65537, 1, 786456, 65537, 1, 720920, 65537, 1, 655384, 65537, 1, 589848, 65537, 1, 524312, 65537, 1, 458776, 65537, 1, 393240, 65537, 1, 327704, 65537, 1, 262168, 65537, 1, 262169, 65537, 1, 327705, 65537, 1, 393241, 65537, 1, 458777, 65537, 1, 524313, 65537, 1, 589849, 65537, 1, 655385, 65537, 1, 720921, 65537, 1, 786457, 65537, 1, 851993, 65537, 1, 917529, 65537, 1, 983065, 65537, 1, 1048601, 65537, 1, 1114137, 65537, 2, 1114138, 65537, 2, 1048602, 65537, 1, 983066, 65537, 1, 917530, 65537, 1, 851994, 65537, 1, 786458, 65537, 1, 720922, 65537, 1, 655386, 65537, 1, 589850, 65537, 1, 524314, 65537, 1, 458778, 65537, 1, 393242, 65537, 1, 327706, 65537, 1, 262170, 65537, 1, 262171, 65537, 1, 327707, 65537, 1, 393243, 65537, 1, 458779, 65537, 1, 524315, 65537, 1, 589851, 196609, 0, 655387, 65537, 1, 720923, 65537, 1, 786459, 65537, 1, 851995, 65537, 1, 917531, 65537, 1, 983067, 65537, 1, 1048603, 65537, 1, 1114139, 65537, 2, 1114140, 65537, 2, 1048604, 65537, 1, 983068, 65537, 1, 917532, 65537, 1, 851996, 65537, 1, 786460, 65537, 1, 720924, 65537, 1, 655388, 65537, 1, 589852, 65537, 1, 524316, 65537, 1, 458780, 65537, 1, 393244, 65537, 1, 327708, 65537, 1, 262172, 65537, 1, 262173, 65537, 1, 327709, 65537, 1, 393245, 65537, 1, 458781, 65537, 1, 524317, 65537, 1, 589853, 65537, 1, 655389, 65537, 1, 720925, 65537, 1, 786461, 65537, 1, 851997, 196609, 0, 917533, 65537, 1, 983069, 65537, 1, 1048605, 65537, 1, 1114141, 65537, 2, 1114142, 65537, 2, 1048606, 65537, 1, 983070, 65537, 1, 917534, 65537, 1, 851998, 65537, 1, 786462, 65537, 1, 720926, 65537, 1, 655390, 65537, 1, 589854, 65537, 1, 524318, 65537, 1, 458782, 65537, 1, 393246, 65537, 1, 327710, 65537, 1, 262174, 65537, 1, 262175, 131073, 1, 327711, 131073, 1, 393247, 131073, 1, 458783, 131073, 1, 524319, 131073, 1, 589855, 131073, 1, 655391, 131073, 1, 720927, 131073, 1, 786463, 131073, 1, 851999, 131073, 1, 917535, 131073, 1, 983071, 131073, 1, 1048607, 131073, 1, 1114143, 131073, 2, 262148, 196609, 3, 327684, 196609, 3, 393220, 196609, 3, 458756, 196609, 3, 524292, 196609, 3, 589828, 196609, 3, 655364, 196609, 3, 720900, 196609, 3, 786436, 196609, 3, 851972, 196609, 3, 917508, 196609, 3, 983044, 196609, 3, 1048580, 196609, 3)

[node name="HandsLayer" type="CanvasLayer" parent="Environment"]

[node name="LeftLayout" type="Control" parent="Environment/HandsLayer"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftHand" parent="Environment/HandsLayer/LeftLayout" instance=ExtResource("4_2b6pw")]
position = Vector2(-50, -100)

[node name="RightLayout" type="Control" parent="Environment/HandsLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="RightHand" parent="Environment/HandsLayer/RightLayout" instance=ExtResource("4_2b6pw")]
position = Vector2(92, -100)
offset = Vector2(11.5, 20.667)
flip_h = true

[node name="PlayerBoundary" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="Left" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(117, 333.5)
shape = SubResource("RectangleShape2D_vtmmo")

[node name="Right" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(1034, 335)
shape = SubResource("RectangleShape2D_iiqut")

[node name="Up" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(574.5, 86.9997)
rotation = 1.57079
shape = SubResource("RectangleShape2D_bg5mv")

[node name="Down" type="CollisionShape2D" parent="PlayerBoundary"]
position = Vector2(571.531, 583)
rotation = 1.57079
shape = SubResource("RectangleShape2D_qpchm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-592, 320)
shape = SubResource("RectangleShape2D_s61pv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1744, 320)
shape = SubResource("RectangleShape2D_1miv7")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(577, 800)
rotation = 1.57079
shape = SubResource("RectangleShape2D_sy6kt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(577, -100)
rotation = 1.57079
shape = SubResource("RectangleShape2D_4wuon")

[node name="Player" parent="." instance=ExtResource("6_51teh")]
position = Vector2(576, 324)
script = ExtResource("7_30vet")

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CoinTimer" type="Timer" parent="."]
one_shot = true

[node name="Joystick" parent="." instance=ExtResource("7_vhad4")]

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="BulletTimer" to="." method="spawn_bullets"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
